# go-cli

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  sample-config.json  sample-config.yaml
cmd/kc/: BUILD.bazel  main.go
internal/command/commands/: BUILD.bazel  command.go  help.go  listdir.go  readconfig.go
internal/command/registry/: BUILD.bazel  registry.go
internal/interfaces/: BUILD.bazel  command.go
