load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_cross_binary")

# gazelle:prefix github.com/kartones/kc
gazelle(name = "gazelle")

# keep: Convenience duplication of //cmd/kc:kc just for sample purposes.
go_binary(
    name = "kc",
    embed = ["//cmd/kc:kc_lib"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "kc_darwin_amd64",
    platform = "@rules_go//go/toolchain:darwin_amd64",
    target = ":kc",
)

go_cross_binary(
    name = "kc_darwin_arm64",
    platform = "@rules_go//go/toolchain:darwin_arm64",
    target = ":kc",
)

go_cross_binary(
    name = "kc_linux_amd64",
    platform = "@rules_go//go/toolchain:linux_amd64",
    target = ":kc",
)

go_cross_binary(
    name = "kc_linux_arm64",
    platform = "@rules_go//go/toolchain:linux_arm64",
    target = ":kc",
)

go_cross_binary(
    name = "kc_windows_amd64",
    platform = "@rules_go//go/toolchain:windows_amd64",
    target = ":kc",
)

go_cross_binary(
    name = "kc_windows_arm64",
    platform = "@rules_go//go/toolchain:windows_arm64",
    target = ":kc",
)
